Update azure-pipelines.yml for Azure Pipelines1

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ trigger:
 - hotfix/*
 
 pool:
-  name: 'Demo'
+  name: 'Demo1'
   artifaceName: drop
   isMain: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
 
@@ -23,8 +23,8 @@ stages:
 - stage: 'Build'
   jobs:
   - job: 'BuildClient'
-    pool:
-      name: 'Test'
+    # pool:
+    #  name: 'Test'
     steps:  
     - task: Npm@1
       displayName: 'Install Client Dependencies'
@@ -69,96 +69,3 @@ stages:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'drop'
         publishLocation: 'Container'
-
-- stage: 'DevDeployment'
-  jobs:
-    # Track deployments on the environment.
-  - deployment: DeployWeb
-    displayName: 'deploy Web App'
-    pool:
-      name: 'Demo'
-    # Creates an environment if it doesn't exist.
-    environment: 'Development'
-    strategy:
-      # Default deployment strategy, more coming...
-      runOnce:
-        deploy:
-          steps:
-          - task: AzureRmWebAppDeployment@4
-            inputs:
-              ConnectionType: 'AzureRM'
-              azureSubscription: 'Azure Connection'
-              appType: 'webAppLinux'
-              WebAppName: 'bermtecdev'
-              packageForLinux: '$(Pipeline.Workspace)/drop/$(config)/*.zip'
-
-- stage: 'TestDeployment'
-  jobs:
-    # Track deployments on the environment.
-  - deployment: DeployWeb
-    displayName: 'deploy Web App'
-    pool:
-      name: 'Demo'
-    # Creates an environment if it doesn't exist.
-    environment: 'Test'
-    strategy:
-      # Default deployment strategy, more coming...
-      runOnce:
-        deploy:
-          steps:
-          - task: AzureRmWebAppDeployment@4
-            inputs:
-              ConnectionType: 'AzureRM'
-              azureSubscription: 'Azure Connection'
-              appType: 'webAppLinux'
-              WebAppName: 'bermtecdev'
-              packageForLinux: '$(Pipeline.Workspace)/drop/$(config)/*.zip'
-
-- stage: 'StagingDeployment'
-  jobs:
-    # Track deployments on the environment.
-  - deployment: DeployWeb
-    displayName: 'deploy Web App'
-    variables: 
-      app: bermtecstaging
-    pool:
-      name: 'Demo'
-    # Creates an environment if it doesn't exist.
-    environment: 'Staging'
-    strategy:
-      # Default deployment strategy, more coming...
-      runOnce:
-        deploy:
-          steps:
-          - task: AzureRmWebAppDeployment@4
-            inputs:
-              ConnectionType: 'AzureRM'
-              azureSubscription: 'Azure Connection'
-              appType: 'webAppLinux'
-              WebAppName: '$(app)'
-              packageForLinux: '$(Pipeline.Workspace)/drop/$(config)/*.zip'
-
-- stage: 'ProdDeployment'
-  jobs:
-    # Track deployments on the environment.
-  - deployment: DeployWeb
-    displayName: 'deploy Web App'
-    condition: and(succeeded(), eq(variables.isMain, 'true'))
-    variables: 
-      app: bermtec
-    pool:
-      name: 'Demo'
-    # Creates an environment if it doesn't exist.
-    environment: 'Prod'
-    strategy:
-      # Default deployment strategy, more coming...
-      runOnce:
-        deploy:
-          steps:
-          - task: AzureRmWebAppDeployment@4
-            inputs:
-              ConnectionType: 'AzureRM'
-              azureSubscription: 'Azure Connection'
-              appType: 'webAppLinux'
-              WebAppName: '$(app)'
-              packageForLinux: '$(Pipeline.Workspace)/drop/$(config)/*.zip'
