--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ trigger:
 - hotfix/*
 
 pool:
-  name: 'Demo'
+  name: 'Demo2'
   artifaceName: drop
   isMain: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
 
